tests/generics/generics.exp
Error: generics.js:19
 19: var s:string = d.x;
                    ^^^ number. This type is incompatible with
 19: var s:string = d.x;
           ^^^^^^ string

Error: generics.js:20
 20: var n:number = o.u;
                    ^^^ T. This type is incompatible with
 20: var n:number = o.u;
           ^^^^^^ number

Error: generics.js:28
 28: var x:string = e.set(0);
                    ^^^^^^^^ number. This type is incompatible with
 28: var x:string = e.set(0);
           ^^^^^^ string

Error: generics.js:28
 28: var x:string = e.set(0);
                    ^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
 28: var x:string = e.set(0);
           ^^^^^^ string

Error: generics.js:38
 38: h1.foo(["..."]);
            ^^^^^^^ array literal. Has some incompatible type argument with
 39: var h2:F<Array<Array<Array<number>>>> = h1;
                          ^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     38: h1.foo(["..."]);
                 ^^^^^ string. This type is incompatible with
     39: var h2:F<Array<Array<Array<number>>>> = h1;
                                    ^^^^^^ number

Error: generics.js:41
 41: var obj : Object<string, string> = {} // error, arity 0
               ^^^^^^^^^^^^^^^^^^^^^^ Incorrect number of type parameters (expected 0)

Error: generics.js:42
 42: var fn : Function<string> = function() { return 'foo'; } // error, arity 0
              ^^^^^^^^^^^^^^^^ Incorrect number of type parameters (expected 0)

Error: generics.js:43
 43: var fn : function<string> = function() { return 'foo'; } // error, arity 0
              ^^^^^^^^^^^^^^^^ Incorrect number of type parameters (expected 0)


Found 8 errors
